<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/sample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawDetectorActivity">

    <Button
        android:id="@+id/start1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/valider"
        android:text="START"
        android:background="@drawable/buttonshapecolor"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        tools:ignore="NotSibling" />


    <Button
        android:id="@+id/valider"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="-205dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/color"
        android:background="@drawable/buttonshapecolor"

        android:text="Valider"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


    <Button
        android:id="@+id/effacer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:background="@drawable/buttonshapecolor"

        android:layout_marginTop="3dp"
        android:text="EFFACER"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/color"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:background="@drawable/buttonshapecolor"

        android:layout_marginStart="6dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/effacer"
        android:text="COLOR"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"

        android:layout_marginTop="1dp"
        android:text="Dessiner un : "
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="41dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:background="@drawable/textviewbordershape"

        android:layout_marginStart="-1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/textView4"
        android:text="  Press start"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/app_name"
        android:background="@drawable/textviewbordershape"

        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tutoriel"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonshapecolor"

        android:layout_marginBottom="0dp"
        android:text="HOW TO PLAY"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:text=" "
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="Score" />


    <projet.license.PaintView
        android:id="@+id/myCanvas"
        android:layout_width="wrap_content"
        android:layout_height="528dp"
        android:layout_above="@+id/click"
        android:layout_below="@+id/valider"
        android:background="@drawable/textviewbordershape"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="2dp" />

    <TextView
        android:id="@+id/click"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/tutoriel"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/leftBord"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tutoriel"
        android:layout_below="@+id/effacer"
        android:layout_alignParentStart="true"
        android:background="@drawable/textviewbordershape"

        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:text="\n\n\n\n\n\nJ\nU\nS\nT\nE\n"
        android:textAlignment="center"
        android:textColor="?attr/colorError"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rightBord"
        android:layout_width="40dp"
        android:layout_height="523dp"
        android:layout_above="@+id/score"
        android:layout_below="@+id/start1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:background="@drawable/textviewbordershape"

        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:text="\n\n\n\n\n\nF\nA\nU\nX"
        android:textAlignment="center"
        android:textColor="?attr/colorError"
        android:textSize="24sp"
        android:textStyle="bold" />


</RelativeLayout>