package projet.license;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isEnabled;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.core.IsNot.not;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class TimeDetectorTest {

    @Rule
    public ActivityTestRule<TimeDetectorActivity> mActivityTestRule = new ActivityTestRule<>(TimeDetectorActivity.class);

    @Test
    public void timeDetectorTest() {
        onView(withId(R.id.button_start_pause)).check(matches(isEnabled()));
        onView(withId(R.id.button_start_pause)).check(matches(withText("START")));

        ViewInteraction button2 = onView(
                allOf(withId(R.id.button_start_pause), withText("START"),
                        childAtPosition(
                                allOf(withId(R.id.timeGame),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                1),
                        isDisplayed()));
        button2.perform(click());
        onView(withId(R.id.formeDemande)).check(matches(not(withText(""))));
        onView(withId(R.id.button_start_pause)).check(matches(withText("PAUSE")));

        ViewInteraction button3 = onView(
                allOf(withId(R.id.button_start_pause), withText("pause"),
                        childAtPosition(
                                allOf(withId(R.id.timeGame),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                1),
                        isDisplayed()));
        button3.perform(click());

        ViewInteraction button4 = onView(
                allOf(withId(R.id.button_reset), withText("RESET"),
                        childAtPosition(
                                allOf(withId(R.id.timeGame),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                5),
                        isDisplayed()));
        button4.perform(click());
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
